# HTMLPatchingParser

./: LICENSE  README.md  pyproject.toml
examples/: testInjection.py
src/HTMLPatchingParser/: HTMLPatchingParser.py  HTMLparser.py
